--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Alex G</title>
-  <link rel="icon" href="favicon3.ico">
+  <link rel="icon" href="favicon.ico">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento&display=swap" rel="stylesheet">
@@ -27,9 +27,8 @@
 
       <nav class="navbar navbar-expand-lg ">
 
-        <a class="navbar-left" href="#title">
-          <img class="logo-img" src="images/logo2.png" alt="logo-img">
-        </a>
+        <!-- <img src="images/my_logo.png" alt="logo-img" width="7.5%"> -->
+
 
         <button class="navbar-toggler navbar-light" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -53,11 +52,8 @@
       </nav>
 
       <div class="top-container">
-        <img class="top-cloud" src="images/clouds.png" alt="cloud-img">
         <h1>I'm Alex.</h1>
         <h3 class="header-desc">a web developer</h3>
-        <img class="bottom-cloud" src="images/clouds.png" alt="cloud-img">
-        <img class="hills" src="images/forest1.png" alt="hills-img">
 
       </div>
     </div>
@@ -85,6 +81,7 @@
         <p>Well, that's another passion of mine. In other words I'm secretly world famous traveler. Hence the World knows nothing about my fame... (Hope you can keep secrets)</p>
       </div>
     </div>
+  </div>
 
 
 </section>
@@ -99,19 +96,41 @@
         <div id="projects-carousel" class="carousel slide" data-ride="false" data-pause="hover">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <a href="https://gravasa.github.io/drumkit/"><img class="drum-img" src="images/drums!.png" alt="Drums-img"></a>
+              <a href="https://just-sign-up-page.herokuapp.com/"><img class="projects-img" src="images/signup.png" alt="Signup-img"></a>
+              <a class="project-link" href="https://just-sign-up-page.herokuapp.com/"><h3 class="project-title">Sign Up Page</h3></a>
 
+              <p>Track your audience. Sign up page connected to Mailchimp and deployed to Heroku.</p>
+            </div>
+
+            <div class="carousel-item ">
+              <a href="https://just-do-it-list.herokuapp.com/"><img class="projects-img" src="images/todo-list.png" alt="Todo-img"></a>
+              <a class="project-link" href="https://just-do-it-list.herokuapp.com/"><h3 class="project-title">To-Do List</h3></a>
+
+              <p>To-Do List app with basic functionality. Done with Node.js and MongoDB, deployed to Heroku. Just check it out!</p>
+            </div>
+
+            <div class="carousel-item ">
+              <a href="https://gravasa.github.io/drumkit/"><img class="projects-img" src="images/drums!.png" alt="Drums-img"></a>
               <a class="project-link" href="https://gravasa.github.io/drumkit/"><h3 class="project-title">Drum Kit</h3></a>
 
-              <p>Be a drummer in just one click. Or be a super-drummer in several clicks... Well, I'm sure you'll figure it out.</p>
+              <p>Be a drummer in just one click. Or be a super-drummer in several clicks... Well, I'm sure you'll figure it out. (Desktop version)</p>
             </div>
 
-            <div class="carousel-item">
-              <a href="https://gravasa.github.io/simongame/"><img class="simon-img" src="images/simon.png" alt="Simon-img"></a>
+            <div class="carousel-item simon">
+              <a href="https://gravasa.github.io/simongame/"><img class="projects-img" src="images/simon.png" alt="Simon-img"></a>
               <a class="project-link" href="https://gravasa.github.io/simongame/"><h3 class="project-title">Simon Game</h3></a>
 
-              <p>Challenge your memory with an easy to play old-school Simon.</p>
+              <p>Challenge your memory with an easy to play old-school Simon. Done with Javascript and jQuery. (Desktop version) </p><br>
             </div>
+
+            <div class="carousel-item simon">
+              <a href="https://gravasa.github.io/dice-game/"><img class="projects-img" src="images/white_dice.png" alt="dice-img"></a>
+              <a class="project-link" href="https://gravasa.github.io/dice-game/"><h3 class="project-title">Dice Game</h3></a>
+
+              <p>A simple dice game. Done with JavaScript. Challenge your friend by simply refreshing the page.</p><br>
+            </div>
+
+
           </div>
           <a class="carousel-control-prev" href="#projects-carousel" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" ></span>
@@ -144,9 +163,10 @@
 
   <div class="bottom-container">
     <a class="footer-link" href="https://www.facebook.com/alexey.gavras">Facebook</a>
-    <a class="footer-link" href="https://www.instagram.com/alex.gavras/">Instagram</a>
+    <a class="footer-link" href="https://www.linkedin.com/in/alex-gavras-0a2461176/">LinkedIn</a>
+    <a class="footer-link" href="https://github.com/gravasa">GitHub</a>
     <br>
-    <p class="copyright">© 2019 Alex Gavras.</p>
+    <p class="copyright">© 2020 Alex Gavras.</p>
     <br>
   </div>
   </section>
