Update with @media for mobile

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Alex G</title>
   <link rel="icon" href="favicon.ico">
 
@@ -52,7 +53,7 @@
       </nav>
 
       <div class="top-container">
-        <h1>I'm Alex.</h1>
+        <h1>I'm Alex</h1>
         <h3 class="header-desc">a web developer</h3>
 
       </div>
@@ -63,9 +64,9 @@
 
   <div class="middle-container">
     <div class="profile">
-      <img class="profile-img" src="images/profile-img.png" alt="profile-img">
+      <img class="profile-img" src="images/profile.jpeg" alt="profile-img">
       <h2>Hi.</h2>
-      <p class="intro">I'm a Web Developer. My passion is to turn ideas into reality using the magic of coding.</p>
+      <p class="intro">I'm a Web Developer. <br> My passion is to turn ideas into reality using the magic of coding.</p>
     </div>
     <hr>
     <div class="skills">
@@ -117,13 +118,13 @@
             </div>
 
             <div class="carousel-item simon">
-              <a href="https://gravasa.github.io/simongame/"><img class="projects-img" src="images/simon.png" alt="Simon-img"></a>
+              <a href="https://gravasa.github.io/simongame/"><img class="projects-img simon-img" src="images/simon.png" alt="Simon-img"></a>
               <a class="project-link" href="https://gravasa.github.io/simongame/"><h3 class="project-title">Simon Game</h3></a>
 
               <p>Challenge your memory with an easy to play old-school Simon. Done with Javascript and jQuery. (Desktop version) </p><br>
             </div>
 
-            <div class="carousel-item simon">
+            <div class="carousel-item">
               <a href="https://gravasa.github.io/dice-game/"><img class="projects-img" src="images/white_dice.png" alt="dice-img"></a>
               <a class="project-link" href="https://gravasa.github.io/dice-game/"><h3 class="project-title">Dice Game</h3></a>
 
