--- a/index.html
+++ b/index.html
@@ -97,36 +97,36 @@
         <div id="projects-carousel" class="carousel slide" data-ride="false" data-pause="hover">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <a href="https://just-sign-up-page.herokuapp.com/"><img class="projects-img" src="images/signup.png" alt="Signup-img"></a>
-              <a class="project-link" href="https://just-sign-up-page.herokuapp.com/"><h3 class="project-title">Sign Up Page</h3></a>
+              <a href="https://just-sign-up-page.herokuapp.com/" target="_blank"><img class="projects-img" src="images/signup.png" alt="Signup-img"></a>
+              <a class="project-link" href="https://just-sign-up-page.herokuapp.com/" target="_blank"><h3 class="project-title">Sign Up Page</h3></a>
 
               <p>Track your audience. Sign up page connected to Mailchimp and deployed to Heroku.</p>
             </div>
 
             <div class="carousel-item ">
-              <a href="https://just-do-it-list.herokuapp.com/"><img class="projects-img" src="images/todo-list.png" alt="Todo-img"></a>
-              <a class="project-link" href="https://just-do-it-list.herokuapp.com/"><h3 class="project-title">To-Do List</h3></a>
+              <a href="https://just-do-it-list.herokuapp.com/" target="_blank"><img class="projects-img" src="images/todo-list.png" alt="Todo-img"></a>
+              <a class="project-link" href="https://just-do-it-list.herokuapp.com/" target="_blank"><h3 class="project-title">To-Do List</h3></a>
 
               <p>To-Do List app with basic functionality. Done with Node.js and MongoDB, deployed to Heroku. Just check it out!</p>
             </div>
 
             <div class="carousel-item ">
-              <a href="https://gravasa.github.io/drumkit/"><img class="projects-img" src="images/drums!.png" alt="Drums-img"></a>
-              <a class="project-link" href="https://gravasa.github.io/drumkit/"><h3 class="project-title">Drum Kit</h3></a>
+              <a href="https://gravasa.github.io/drumkit/" target="_blank"><img class="projects-img" src="images/drums!.png" alt="Drums-img"></a>
+              <a class="project-link" href="https://gravasa.github.io/drumkit/" target="_blank"><h3 class="project-title">Drum Kit</h3></a>
 
               <p>Be a drummer in just one click. Or be a super-drummer in several clicks... Well, I'm sure you'll figure it out. (Desktop version)</p>
             </div>
 
             <div class="carousel-item simon">
-              <a href="https://gravasa.github.io/simongame/"><img class="projects-img simon-img" src="images/simon.png" alt="Simon-img"></a>
-              <a class="project-link" href="https://gravasa.github.io/simongame/"><h3 class="project-title">Simon Game</h3></a>
+              <a href="https://gravasa.github.io/simongame/" target="_blank"><img class="projects-img simon-img" src="images/simon.png" alt="Simon-img"></a>
+              <a class="project-link" href="https://gravasa.github.io/simongame/" target="_blank"><h3 class="project-title">Simon Game</h3></a>
 
               <p>Challenge your memory with an easy to play old-school Simon. Done with Javascript and jQuery. (Desktop version) </p><br>
             </div>
 
             <div class="carousel-item">
-              <a href="https://gravasa.github.io/dice-game/"><img class="projects-img" src="images/white_dice.png" alt="dice-img"></a>
-              <a class="project-link" href="https://gravasa.github.io/dice-game/"><h3 class="project-title">Dice Game</h3></a>
+              <a href="https://gravasa.github.io/dice-game/" target="_blank"><img class="projects-img" src="images/white_dice.png" alt="dice-img"></a>
+              <a class="project-link" href="https://gravasa.github.io/dice-game/" target="_blank"><h3 class="project-title">Dice Game</h3></a>
 
               <p>A simple dice game. Done with JavaScript. Challenge your friend by simply refreshing the page.</p><br>
             </div>
